[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "translate_md"
description = "Python client to translate markdown files from englisth to spanish"
authors = [
    {name = "Agustín Piqueres", email = "agustin.piqueres@gmail.com"}
]
dependencies = [
    "mdformat>=0.7.16",
    "markdown-it-py>=2.2.0",
    "requests>=2.28.2"
]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.1.0",
    "nox>=2022.11.21",
]
dev = [
    "black",
    "mypy",
    "ruff"
]
cli = [
    "typer>=0.7.0",
    "rich>=13.3.2"
]

[project.scripts]
translate-md = "translate_md.main:app"

[project.urls]
Source = "https://github.com/plaguss/translate-md"

[tool.hatch.version]
path = "src/translate_md/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/translate_md"]

[tool.pytest]
addopts = [
    "--cov=src/translate_md",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.ruff]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F", "I001"]
line-length = 88  # Same as black
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google" 
